New lab wesbsite format

--- a/index.html
+++ b/index.html
@@ -4,62 +4,55 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="homepageimages/midi_icon.jpg" type="image/x-icon">
     <title>Machine Intelligence through Decision-making and Interaction</title>
     <meta name="author" content="MIDI">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="w3stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="midistyle.css"/>
 </head>
 
 <body>
+<!-- DO NOT CHANGE, CONSTANT ACROSS ALL PAGES -->
+<!-- Navigation bar -->
+<div class="topnav">
+    <nav class="navbar">
+      <a class="active" href="index.html">Home</a>
+      <a href="people.html">People</a>
+      <a href="publications.html">Publications</a>
+      <a href="getting_involved.html">Getting Involved</a>
+    </nav>
+  </div>
+<!-- MIDI Logo and Lab Title -->
+<header class="midi-header">
+    <img src="homepageimages/midilogo.png" alt="MIDI Logo" class="midi-logo">
+    <h1 class="header-title">Machine Intelligence through Decision-making and Interaction</h1>
+</header>
 
-<!--Header section-->
-    <!--background photo--> <header class="w3-container" style="text-align:center; background-image: url('homepageimages/CoverGradient.png');
-        background-size: cover; width:100%; max-height: auto">
-        <img src="homepageimages/midilabanimated.png" style="max-width: 35vw; max-height: auto; padding: 2.5vw; padding-top:5vw">
-        <h1 style="font-weight: bold; color:white"; margin: 2.5%">Machine Intelligence through Decision-making and Interaction</h1>
-        <img src="TexasLogoWhite.png" style="max-width: 15vw; max-height: auto; padding: 2.5vw; padding-bottom:5vw">
-    </header>
 
-<!--navigation bar -->
-<div class="topnav">     
-    <topnav style="list-style: none; font-weight:bold; justify-content: space-around; display: flex ">
-     <center>
-     <a class="active" href="index.html">Home</a>
-     <a href="people.html">People</a>
-     <a href="publications.html">Publications</a>
-     <a href="getting_involved.html" >Getting Involved</a>
-     <link rel="shortcut icon" type=“image/x-icon” href="favicon.ico"/>
-     </center>
-  </topnav>
-</div>
+<div class="centered-container" style="max-width: 1200px"> 
 
 <!--About the lab section-->
-    <div class="w3-container" style=" width:100%; height:auto; padding-top: 2.5vw; padding-bottom: 5vw">
-        <!--photo of lab members--> <img src="homepageimages/lab.jpeg" style="box-sizing: unset; padding: 0%; margin: 5%; margin-top:2.5%; max-height:450px; max-width: 90%; float: left;" alt="Lab members">
-        <h2 style="margin: 5%; margin-top:2.5%; margin-bottom: 1.5%; font-weight:bold">About the Lab </h2>
-        <p style="margin-top: 1.5%"> The MIDI group focuses on improving reinforcement learning algorithms to generalize and adapt for sequential decision-making problems in the real world. To this end, our research focuses on reinforcement learning but also touches upon the areas of continual learning, representation learning, Bayesian inference and uncertainty modeling, robot learning, and multi-agent learning.
-        </p>
-        <center>
-        <div class="w3-container style=" width:100%; height:auto margin: 2.5%"
-            <!--UT Logo-->  <img src="homepageimages/UTexas.webp" style="width: 375px; max-width: 42.5vw; height: auto; padding-right: 2.5%; padding-left: 2.5%">
-            <!--UT ECE logo-->  <img src="homepageimages/utece.webp" style="width: 375px; max-width: 42.5vw; height: auto; padding-right: 2.5%; padding-left: 2.5%">    
-        </center> 
-        </div>
-    </div>
+<div class="content" style="width:100%; height:auto; padding-top: 1.5vw; padding-bottom: 2vw">
+    <!--photo of lab members-->
+    <img src="homepageimages/lab.jpeg" 
+         style="box-sizing: unset; padding: 0%; margin-right: 8vw; margin: 5%; margin-top:2.5%; max-height:auto; max-width: 35%; float: left;" 
+         alt="Lab members">
+    <h2 style="margin: 5%; margin-top:2.5%; margin-bottom: 1.5%; font-weight:bold">About the Lab</h2>
+    <p style="margin-top: 1.5%">
+        The MIDI group is led by <a href="https://amyzhang.github.io/">Professor Amy Zhang</a> and a part of The University of Texas at Austin, Department of Electrical and Computer Engineering.
+        <br><br>
+        We focus on improving reinforcement learning algorithms to generalize and adapt for sequential decision-making problems in the real world. 
+        <br>
+        Our research centers on reinforcement learning but also touches upon the areas of representation learning, generative models, robot learning, and multi-agent learning.
+    </p>
+</div>
 
-
-<!--About Amy section-->
-    <div class="w3-container" style="background-color: #70a9ff; width: 100%; height:auto"> 
-         <!--Amy photo--> <img src="homepageimages/amyzhang.png" style="border-radius: 50%; border: 1vw solid #ffffff; max-height:20vmax; max-width: 50%; margin: 7.5%; float: right;" alt="Amy Zhang">
-         <h2 style="margin: 5%; margin-bottom: 2.5%; font-weight:bold">About Amy Zhang </h2>
-         <p style="max-width: 100%; margin-top: 2.5%"> I am an assistant professor in the Chandra Family Department of Electrical and Computer Engineering at UT Austin. My lab's goal is to improve reinforcement learning algorithms to generalize and adapt for sequential decision-making problems in the real world. To this end, my research focuses on reinforcement learning but also touches upon the areas of continual learning, representation learning, Bayesian inference and uncertainty modeling, robot learning, and multi-agent learning.</p>
-    </div>
+</div>
 
 <!--Footer--> 
-    <div class="footer">
-         <footer>Copyright 2023 | MIDILab | The University of Texas at Austin</footer>
-    </div>
+<div class="footer">
+    <footer>Copyright 2025 | MIDILab | The University of Texas at Austin</footer>
+</div>
 
 </body> 
 
