--- a/people.html
+++ b/people.html
@@ -97,7 +97,7 @@
 <!-- Visitng Students -->
 <div class="people-section">
   <h2 class="people-title">Visiting Students</h2>
-<div class="people-grid">
+  <div class="people-grid">
 
     
 
@@ -107,9 +107,19 @@
 <!-- Undergrads -->
 <div class="people-section">
   <h2 class="people-title">Undergraduate Students</h2>
-<div class="people-grid">
+  <div class="people-grid">
 
-    
+    <!-- Sarthak -->
+    <a href="https://sarthakdayal.com" class="person-card" target="_blank" rel="noopener">
+      <img src="peoplepageimages/sarthak.jpg" class="person-img" alt="Sarthak Dayal">
+      <span class="person-name">Sarthak Dayal</span>
+    </a>
+
+    <!-- Evan -->
+    <a href="https://evankuo.vercel.app/" class="person-card" target="_blank" rel="noopener">
+      <img src="peoplepageimages/evan.jpg" class="person-img" alt="Evan Kuo">
+      <span class="person-name">Evan Kuo</span>
+    </a>
 
   </div>
 </div>
