--- a/people.html
+++ b/people.html
@@ -89,6 +89,14 @@
       <img src="peoplepageimages/karen.png" class="person-img" alt="Jiahui (Karen) Chen">
       <span class="person-name">Jiahui (Karen) Chen</span>
     </a>
+
+    <!-- Chang -->
+    <a href="https://changshiraine.github.io/" class="person-card" target="_blank" rel="noopener">
+      <img src="peoplepageimages/chang.png" class="person-img" alt="Chang Shi">
+      <span class="person-name">Chang Shi</span>
+    </a>
+
+        
   </div>
 </div>
 
