--- a/people.html
+++ b/people.html
@@ -92,7 +92,7 @@
 
     <!-- Chang -->
     <a href="https://changshiraine.github.io/" class="person-card" target="_blank" rel="noopener">
-      <img src="peoplepageimages/chang.png" class="person-img" alt="Chang Shi">
+      <img src="peoplepageimages/chang.jpeg" class="person-img" alt="Chang Shi">
       <span class="person-name">Chang Shi</span>
     </a>
 
