Updating Caleb's post-grad plans

--- a/people.html
+++ b/people.html
@@ -133,7 +133,7 @@
     <a href="http://calcharles.github.io/" class="person-card" target="_blank" rel="noopener">
       <img src="peoplepageimages/caleb.jpg" class="person-img" alt="Caleb Chuck">
       <span class="person-name">Caleb Chuck</span>
-      <span class="person-desc">After Graduation: TODO</span>
+      <span class="person-desc">After Graduation: Synthefy</span>
     </a>
 
     <!-- Harshit -->
