All undergrads added

--- a/people.html
+++ b/people.html
@@ -121,6 +121,12 @@
       <span class="person-name">Evan Kuo</span>
     </a>
 
+    <!-- Abhinav -->
+    <a href="https://www.linkedin.com/in/abhinav-peri-94aa82224/" class="person-card" target="_blank" rel="noopener">
+      <img src="peoplepageimages/abhinav.jpg" class="person-img" alt="Abhinav Peri">
+      <span class="person-name">Abhinav Peri</span>
+    </a>
+
   </div>
 </div>
 
